--- a/src/main/resources/static/css/sb-admin-2.css
+++ b/src/main/resources/static/css/sb-admin-2.css
@@ -9943,7 +9943,7 @@ a:focus {
 
 .bg-gradient-dark {
   background-color: #5a5c69;
-  background-image: linear-gradient(180deg, #5a5c69 10%, #373840 100%);
+  background-image: linear-gradient(180deg, #5a5c69 10%, #1d1d21 100%);
   background-size: cover;
 }
 
