--- a/src/main/resources/static/scss/sb-admin-2.css
+++ b/src/main/resources/static/scss/sb-admin-2.css
@@ -9307,8 +9307,8 @@ a:focus {
 }
 
 .bg-gradient-dark {
-  background-color: #5a5c69;
-  background-image: linear-gradient(180deg, #5a5c69 10%, #373840 100%);
+  background-color: #36383f;
+  background-image: linear-gradient(180deg, #303138 10%, #1d1d21 100%);
   background-size: cover;
 }
 
