--- a/src/main/resources/static/scss/_variables.scss
+++ b/src/main/resources/static/scss/_variables.scss
@@ -13,7 +13,7 @@ $gray-500: #b7b9cc !default;
 $gray-600: #858796 !default;
 $gray-700: #6e707e !default;
 $gray-800: #5a5c69 !default;
-$gray-900: #3a3b45 !default;
+$gray-900: #2a2929 !default;
 $black: #000 !default;
 
 $blue: #4e73df !default;
@@ -76,6 +76,6 @@ $dropdown-font-size: 0.85rem !default;
 $dropdown-border-color: $border-color !default;
 
 // Images
-$login-image: 'https://source.unsplash.com/K4mSJ7kc0As/600x800' !default;
+$login-image: '../img/login_image.jpg' !default;
 $register-image: 'https://source.unsplash.com/Mv9hjnEUHR4/600x800' !default;
 $password-image: 'https://source.unsplash.com/oWTW-jNGl9I/600x800' !default;
