--- a/src/main/resources/static/scss/_global.scss
+++ b/src/main/resources/static/scss/_global.scss
@@ -6,7 +6,8 @@ html {
 }
 
 body {
-  height: 100%;
+  //height: 100%;
+  height: auto;
 }
 
 a {
@@ -40,11 +41,15 @@ a {
   position: fixed;
   right: 1rem;
   bottom: 1rem;
-  display: none;
+  display: flex !important;
+  flex-wrap: wrap !important;
+  align-content: center !important;
+  justify-content: center !important;
+  vertical-align: middle !important;
   width: 2.75rem;
   height: 2.75rem;
   text-align: center !important;
-  align-items: center;
+  align-items: center !important;
   color: $white;
   background: fade-out($gray-800, .5);
   line-height: 46px;
