--- a/src/main/resources/static/scss/sb-admin-2.css
+++ b/src/main/resources/static/scss/sb-admin-2.css
@@ -9183,7 +9183,7 @@ html {
 }
 
 body {
-  height: 100%;
+  height: auto;
 }
 
 a:focus {
@@ -9216,11 +9216,15 @@ a:focus {
   position: fixed;
   right: 1rem;
   bottom: 1rem;
-  display: none;
+  display: flex !important;
+  flex-wrap: wrap !important;
+  align-content: center !important;
+  justify-content: center !important;
+  vertical-align: middle !important;
   width: 2.75rem;
   height: 2.75rem;
   text-align: center !important;
-  align-items: center;
+  align-items: center !important;
   color: #fff;
   background: rgba(90, 92, 105, 0.5);
   line-height: 46px;
@@ -10128,7 +10132,7 @@ a:focus {
 }
 
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
+  background: url("/img/signup_image2.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -10223,67 +10227,67 @@ form.user .btn-user {
 
 @keyframes noise-anim {
   0% {
-    clip: rect(85px, 9999px, 57px, 0);
+    clip: rect(55px, 9999px, 67px, 0);
   }
   5% {
-    clip: rect(51px, 9999px, 99px, 0);
+    clip: rect(40px, 9999px, 24px, 0);
   }
   10% {
-    clip: rect(17px, 9999px, 32px, 0);
+    clip: rect(17px, 9999px, 11px, 0);
   }
   15% {
-    clip: rect(41px, 9999px, 3px, 0);
+    clip: rect(47px, 9999px, 18px, 0);
   }
   20% {
-    clip: rect(75px, 9999px, 14px, 0);
+    clip: rect(66px, 9999px, 94px, 0);
   }
   25% {
-    clip: rect(79px, 9999px, 23px, 0);
+    clip: rect(31px, 9999px, 64px, 0);
   }
   30% {
-    clip: rect(49px, 9999px, 72px, 0);
+    clip: rect(67px, 9999px, 100px, 0);
   }
   35% {
-    clip: rect(79px, 9999px, 35px, 0);
+    clip: rect(51px, 9999px, 88px, 0);
   }
   40% {
-    clip: rect(75px, 9999px, 4px, 0);
+    clip: rect(80px, 9999px, 64px, 0);
   }
   45% {
-    clip: rect(95px, 9999px, 20px, 0);
+    clip: rect(84px, 9999px, 34px, 0);
   }
   50% {
-    clip: rect(51px, 9999px, 3px, 0);
+    clip: rect(1px, 9999px, 52px, 0);
   }
   55% {
-    clip: rect(83px, 9999px, 35px, 0);
+    clip: rect(94px, 9999px, 80px, 0);
   }
   60% {
-    clip: rect(51px, 9999px, 4px, 0);
+    clip: rect(17px, 9999px, 4px, 0);
   }
   65% {
-    clip: rect(35px, 9999px, 98px, 0);
+    clip: rect(82px, 9999px, 9px, 0);
   }
   70% {
-    clip: rect(49px, 9999px, 48px, 0);
+    clip: rect(40px, 9999px, 47px, 0);
   }
   75% {
-    clip: rect(69px, 9999px, 92px, 0);
+    clip: rect(8px, 9999px, 20px, 0);
   }
   80% {
-    clip: rect(46px, 9999px, 33px, 0);
+    clip: rect(87px, 9999px, 88px, 0);
   }
   85% {
-    clip: rect(54px, 9999px, 23px, 0);
+    clip: rect(54px, 9999px, 57px, 0);
   }
   90% {
-    clip: rect(74px, 9999px, 52px, 0);
+    clip: rect(42px, 9999px, 50px, 0);
   }
   95% {
-    clip: rect(48px, 9999px, 91px, 0);
+    clip: rect(24px, 9999px, 51px, 0);
   }
   100% {
-    clip: rect(53px, 9999px, 26px, 0);
+    clip: rect(65px, 9999px, 76px, 0);
   }
 }
 .error:after {
@@ -10301,67 +10305,67 @@ form.user .btn-user {
 
 @keyframes noise-anim-2 {
   0% {
-    clip: rect(96px, 9999px, 99px, 0);
+    clip: rect(48px, 9999px, 53px, 0);
   }
   5% {
-    clip: rect(64px, 9999px, 82px, 0);
+    clip: rect(12px, 9999px, 54px, 0);
   }
   10% {
-    clip: rect(61px, 9999px, 96px, 0);
+    clip: rect(58px, 9999px, 17px, 0);
   }
   15% {
-    clip: rect(75px, 9999px, 14px, 0);
+    clip: rect(56px, 9999px, 54px, 0);
   }
   20% {
-    clip: rect(67px, 9999px, 100px, 0);
+    clip: rect(52px, 9999px, 17px, 0);
   }
   25% {
-    clip: rect(42px, 9999px, 96px, 0);
+    clip: rect(48px, 9999px, 31px, 0);
   }
   30% {
-    clip: rect(95px, 9999px, 13px, 0);
+    clip: rect(25px, 9999px, 92px, 0);
   }
   35% {
-    clip: rect(98px, 9999px, 5px, 0);
+    clip: rect(10px, 9999px, 50px, 0);
   }
   40% {
-    clip: rect(21px, 9999px, 79px, 0);
+    clip: rect(76px, 9999px, 1px, 0);
   }
   45% {
-    clip: rect(36px, 9999px, 29px, 0);
+    clip: rect(73px, 9999px, 11px, 0);
   }
   50% {
-    clip: rect(1px, 9999px, 56px, 0);
+    clip: rect(44px, 9999px, 69px, 0);
   }
   55% {
-    clip: rect(2px, 9999px, 50px, 0);
+    clip: rect(36px, 9999px, 24px, 0);
   }
   60% {
-    clip: rect(98px, 9999px, 36px, 0);
+    clip: rect(46px, 9999px, 50px, 0);
   }
   65% {
-    clip: rect(9px, 9999px, 87px, 0);
+    clip: rect(17px, 9999px, 33px, 0);
   }
   70% {
-    clip: rect(19px, 9999px, 86px, 0);
+    clip: rect(97px, 9999px, 49px, 0);
   }
   75% {
-    clip: rect(73px, 9999px, 54px, 0);
+    clip: rect(90px, 9999px, 17px, 0);
   }
   80% {
-    clip: rect(20px, 9999px, 22px, 0);
+    clip: rect(1px, 9999px, 73px, 0);
   }
   85% {
-    clip: rect(27px, 9999px, 53px, 0);
+    clip: rect(92px, 9999px, 15px, 0);
   }
   90% {
-    clip: rect(43px, 9999px, 85px, 0);
+    clip: rect(93px, 9999px, 36px, 0);
   }
   95% {
-    clip: rect(8px, 9999px, 27px, 0);
+    clip: rect(74px, 9999px, 21px, 0);
   }
   100% {
-    clip: rect(54px, 9999px, 2px, 0);
+    clip: rect(41px, 9999px, 95px, 0);
   }
 }
 .error:before {
@@ -10388,6 +10392,38 @@ footer.sticky-footer .copyright {
 
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
+}
+
+.border-left-brown {
+  border-left: 0.25rem solid #5b4545 !important;
+}
+
+.border-bottom-brown {
+  border-bottom: 0.25rem solid #5b4545 !important;
+}
+
+.text-brown {
+  color: #5b4545 !important;
+}
+
+#dashboard-info-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: flex-start;
+  align-items: stretch;
+  margin-bottom: 4rem;
+  row-gap: 2rem;
+  column-gap: 0.75rem;
+}
+#dashboard-info-cards .card-info-item {
+  margin: 0;
+  height: auto;
+  flex: 1 1 48%;
+}
+
+#body-card-log {
+  min-height: 10rem;
 }
 
 /*# sourceMappingURL=sb-admin-2.css.map */
