Adicionado sistema de log

--- a/src/main/resources/static/scss/sb-admin-2.css
+++ b/src/main/resources/static/scss/sb-admin-2.css
@@ -10227,67 +10227,67 @@ form.user .btn-user {
 
 @keyframes noise-anim {
   0% {
-    clip: rect(55px, 9999px, 67px, 0);
+    clip: rect(28px, 9999px, 53px, 0);
   }
   5% {
-    clip: rect(40px, 9999px, 24px, 0);
+    clip: rect(68px, 9999px, 95px, 0);
   }
   10% {
-    clip: rect(17px, 9999px, 11px, 0);
+    clip: rect(1px, 9999px, 69px, 0);
   }
   15% {
-    clip: rect(47px, 9999px, 18px, 0);
+    clip: rect(3px, 9999px, 57px, 0);
   }
   20% {
-    clip: rect(66px, 9999px, 94px, 0);
+    clip: rect(21px, 9999px, 32px, 0);
   }
   25% {
-    clip: rect(31px, 9999px, 64px, 0);
+    clip: rect(24px, 9999px, 60px, 0);
   }
   30% {
-    clip: rect(67px, 9999px, 100px, 0);
+    clip: rect(2px, 9999px, 78px, 0);
   }
   35% {
-    clip: rect(51px, 9999px, 88px, 0);
+    clip: rect(92px, 9999px, 68px, 0);
   }
   40% {
-    clip: rect(80px, 9999px, 64px, 0);
+    clip: rect(8px, 9999px, 26px, 0);
   }
   45% {
-    clip: rect(84px, 9999px, 34px, 0);
+    clip: rect(47px, 9999px, 24px, 0);
   }
   50% {
-    clip: rect(1px, 9999px, 52px, 0);
+    clip: rect(40px, 9999px, 40px, 0);
   }
   55% {
-    clip: rect(94px, 9999px, 80px, 0);
+    clip: rect(86px, 9999px, 54px, 0);
   }
   60% {
-    clip: rect(17px, 9999px, 4px, 0);
+    clip: rect(1px, 9999px, 18px, 0);
   }
   65% {
-    clip: rect(82px, 9999px, 9px, 0);
+    clip: rect(63px, 9999px, 39px, 0);
   }
   70% {
-    clip: rect(40px, 9999px, 47px, 0);
+    clip: rect(74px, 9999px, 70px, 0);
   }
   75% {
-    clip: rect(8px, 9999px, 20px, 0);
+    clip: rect(96px, 9999px, 32px, 0);
   }
   80% {
-    clip: rect(87px, 9999px, 88px, 0);
+    clip: rect(71px, 9999px, 28px, 0);
   }
   85% {
-    clip: rect(54px, 9999px, 57px, 0);
+    clip: rect(62px, 9999px, 32px, 0);
   }
   90% {
-    clip: rect(42px, 9999px, 50px, 0);
+    clip: rect(51px, 9999px, 22px, 0);
   }
   95% {
-    clip: rect(24px, 9999px, 51px, 0);
+    clip: rect(66px, 9999px, 48px, 0);
   }
   100% {
-    clip: rect(65px, 9999px, 76px, 0);
+    clip: rect(61px, 9999px, 32px, 0);
   }
 }
 .error:after {
@@ -10305,67 +10305,67 @@ form.user .btn-user {
 
 @keyframes noise-anim-2 {
   0% {
-    clip: rect(48px, 9999px, 53px, 0);
+    clip: rect(38px, 9999px, 44px, 0);
   }
   5% {
-    clip: rect(12px, 9999px, 54px, 0);
+    clip: rect(49px, 9999px, 37px, 0);
   }
   10% {
-    clip: rect(58px, 9999px, 17px, 0);
+    clip: rect(40px, 9999px, 61px, 0);
   }
   15% {
-    clip: rect(56px, 9999px, 54px, 0);
+    clip: rect(23px, 9999px, 13px, 0);
   }
   20% {
-    clip: rect(52px, 9999px, 17px, 0);
+    clip: rect(36px, 9999px, 91px, 0);
   }
   25% {
-    clip: rect(48px, 9999px, 31px, 0);
+    clip: rect(93px, 9999px, 87px, 0);
   }
   30% {
-    clip: rect(25px, 9999px, 92px, 0);
+    clip: rect(70px, 9999px, 26px, 0);
   }
   35% {
-    clip: rect(10px, 9999px, 50px, 0);
+    clip: rect(59px, 9999px, 87px, 0);
   }
   40% {
-    clip: rect(76px, 9999px, 1px, 0);
+    clip: rect(83px, 9999px, 31px, 0);
   }
   45% {
-    clip: rect(73px, 9999px, 11px, 0);
+    clip: rect(73px, 9999px, 34px, 0);
   }
   50% {
-    clip: rect(44px, 9999px, 69px, 0);
+    clip: rect(34px, 9999px, 34px, 0);
   }
   55% {
-    clip: rect(36px, 9999px, 24px, 0);
+    clip: rect(4px, 9999px, 92px, 0);
   }
   60% {
-    clip: rect(46px, 9999px, 50px, 0);
+    clip: rect(10px, 9999px, 88px, 0);
   }
   65% {
-    clip: rect(17px, 9999px, 33px, 0);
+    clip: rect(53px, 9999px, 40px, 0);
   }
   70% {
-    clip: rect(97px, 9999px, 49px, 0);
+    clip: rect(11px, 9999px, 71px, 0);
   }
   75% {
-    clip: rect(90px, 9999px, 17px, 0);
+    clip: rect(30px, 9999px, 4px, 0);
   }
   80% {
-    clip: rect(1px, 9999px, 73px, 0);
+    clip: rect(5px, 9999px, 16px, 0);
   }
   85% {
-    clip: rect(92px, 9999px, 15px, 0);
+    clip: rect(12px, 9999px, 52px, 0);
   }
   90% {
-    clip: rect(93px, 9999px, 36px, 0);
+    clip: rect(66px, 9999px, 60px, 0);
   }
   95% {
-    clip: rect(74px, 9999px, 21px, 0);
+    clip: rect(28px, 9999px, 81px, 0);
   }
   100% {
-    clip: rect(41px, 9999px, 95px, 0);
+    clip: rect(46px, 9999px, 45px, 0);
   }
 }
 .error:before {
@@ -10422,8 +10422,78 @@ body.sidebar-toggled footer.sticky-footer {
   flex: 1 1 48%;
 }
 
-#body-card-log {
+/*
+#collapseCardLog {
+  max-height: 13rem;
+
+  #body-card-log {
+    overflow-y: auto;
+    min-height: 10rem;
+    max-height: 13rem;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+ */
+#collapseCardLog {
+  max-height: 13rem;
+}
+#collapseCardLog #body-card-log {
+  overflow: auto !important;
+  flex-grow: 1;
+  width: 100%;
   min-height: 10rem;
+  max-height: 13rem;
+  padding: 0;
+  margin: 0;
+}
+#collapseCardLog #body-card-log table {
+  border-collapse: collapse;
+  margin: 0;
+  /*
+      thead tr > :first-child {
+        z-index:3 !important;
+        left:0 !important;
+        top:0 !important;
+      }
+
+  tbody tr > :first-child {
+    //background:#ddd;
+    position: sticky;
+    z-index:1;
+    left:0;
+  }
+
+   */
+}
+#collapseCardLog #body-card-log table thead tr > th {
+  background: #e5e5e5;
+  position: sticky;
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+  z-index: 2;
+  top: 0;
+  border-top: 0;
+  border-bottom: 1px solid #e3e6f0;
+}
+#collapseCardLog #body-card-log table thead {
+  border-bottom: 1px solid #e3e6f0;
+}
+#collapseCardLog #body-card-log table tbody tr > td {
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+}
+
+html {
+  -ms-scroll-chaining: none !important;
+  overscroll-behavior: contain !important;
+}
+
+body {
+  display: flex !important;
+  flex-direction: column !important;
+  height: 100vh !important;
 }
 
 /*# sourceMappingURL=sb-admin-2.css.map */
