--- a/src/main/resources/static/scss/sb-admin-2.css
+++ b/src/main/resources/static/scss/sb-admin-2.css
@@ -9194,9 +9194,13 @@ a:focus {
   display: flex;
 }
 #wrapper #content-wrapper {
-  background-color: #f8f9fc;
+  background-color: #eaecf4;
   width: 100%;
   overflow-x: hidden;
+  background-image: url("../img/wave-right-vertical.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 #wrapper #content-wrapper #content {
   flex: 1 0 auto;
@@ -9534,6 +9538,7 @@ a:focus {
 
 .topbar {
   height: 4.375rem;
+  box-shadow: 0 1px 6px 4px rgba(0, 0, 0, 0.3) !important;
 }
 .topbar #sidebarToggleTop {
   height: 2.5rem;
@@ -9662,7 +9667,7 @@ a:focus {
 
 .sidebar {
   width: 6.5rem;
-  min-height: 100vh;
+  height: 100vh;
 }
 .sidebar .nav-item {
   position: relative;
@@ -10227,67 +10232,67 @@ form.user .btn-user {
 
 @keyframes noise-anim {
   0% {
-    clip: rect(28px, 9999px, 53px, 0);
+    clip: rect(68px, 9999px, 61px, 0);
   }
   5% {
-    clip: rect(68px, 9999px, 95px, 0);
+    clip: rect(27px, 9999px, 19px, 0);
   }
   10% {
-    clip: rect(1px, 9999px, 69px, 0);
+    clip: rect(25px, 9999px, 90px, 0);
   }
   15% {
-    clip: rect(3px, 9999px, 57px, 0);
+    clip: rect(29px, 9999px, 62px, 0);
   }
   20% {
-    clip: rect(21px, 9999px, 32px, 0);
+    clip: rect(21px, 9999px, 67px, 0);
   }
   25% {
-    clip: rect(24px, 9999px, 60px, 0);
+    clip: rect(63px, 9999px, 73px, 0);
   }
   30% {
-    clip: rect(2px, 9999px, 78px, 0);
+    clip: rect(21px, 9999px, 79px, 0);
   }
   35% {
-    clip: rect(92px, 9999px, 68px, 0);
+    clip: rect(48px, 9999px, 67px, 0);
   }
   40% {
-    clip: rect(8px, 9999px, 26px, 0);
+    clip: rect(83px, 9999px, 28px, 0);
   }
   45% {
-    clip: rect(47px, 9999px, 24px, 0);
+    clip: rect(70px, 9999px, 13px, 0);
   }
   50% {
-    clip: rect(40px, 9999px, 40px, 0);
+    clip: rect(5px, 9999px, 85px, 0);
   }
   55% {
-    clip: rect(86px, 9999px, 54px, 0);
+    clip: rect(40px, 9999px, 47px, 0);
   }
   60% {
-    clip: rect(1px, 9999px, 18px, 0);
+    clip: rect(89px, 9999px, 36px, 0);
   }
   65% {
-    clip: rect(63px, 9999px, 39px, 0);
+    clip: rect(82px, 9999px, 67px, 0);
   }
   70% {
-    clip: rect(74px, 9999px, 70px, 0);
+    clip: rect(50px, 9999px, 69px, 0);
   }
   75% {
-    clip: rect(96px, 9999px, 32px, 0);
+    clip: rect(27px, 9999px, 56px, 0);
   }
   80% {
-    clip: rect(71px, 9999px, 28px, 0);
+    clip: rect(80px, 9999px, 70px, 0);
   }
   85% {
-    clip: rect(62px, 9999px, 32px, 0);
+    clip: rect(14px, 9999px, 84px, 0);
   }
   90% {
-    clip: rect(51px, 9999px, 22px, 0);
+    clip: rect(47px, 9999px, 2px, 0);
   }
   95% {
-    clip: rect(66px, 9999px, 48px, 0);
+    clip: rect(27px, 9999px, 36px, 0);
   }
   100% {
-    clip: rect(61px, 9999px, 32px, 0);
+    clip: rect(84px, 9999px, 14px, 0);
   }
 }
 .error:after {
@@ -10305,67 +10310,67 @@ form.user .btn-user {
 
 @keyframes noise-anim-2 {
   0% {
-    clip: rect(38px, 9999px, 44px, 0);
+    clip: rect(91px, 9999px, 3px, 0);
   }
   5% {
-    clip: rect(49px, 9999px, 37px, 0);
+    clip: rect(62px, 9999px, 41px, 0);
   }
   10% {
-    clip: rect(40px, 9999px, 61px, 0);
+    clip: rect(79px, 9999px, 83px, 0);
   }
   15% {
-    clip: rect(23px, 9999px, 13px, 0);
+    clip: rect(19px, 9999px, 49px, 0);
   }
   20% {
-    clip: rect(36px, 9999px, 91px, 0);
+    clip: rect(1px, 9999px, 78px, 0);
   }
   25% {
-    clip: rect(93px, 9999px, 87px, 0);
+    clip: rect(46px, 9999px, 89px, 0);
   }
   30% {
-    clip: rect(70px, 9999px, 26px, 0);
+    clip: rect(73px, 9999px, 93px, 0);
   }
   35% {
-    clip: rect(59px, 9999px, 87px, 0);
+    clip: rect(90px, 9999px, 61px, 0);
   }
   40% {
-    clip: rect(83px, 9999px, 31px, 0);
+    clip: rect(70px, 9999px, 38px, 0);
   }
   45% {
-    clip: rect(73px, 9999px, 34px, 0);
+    clip: rect(11px, 9999px, 38px, 0);
   }
   50% {
-    clip: rect(34px, 9999px, 34px, 0);
+    clip: rect(56px, 9999px, 35px, 0);
   }
   55% {
-    clip: rect(4px, 9999px, 92px, 0);
+    clip: rect(52px, 9999px, 31px, 0);
   }
   60% {
-    clip: rect(10px, 9999px, 88px, 0);
+    clip: rect(20px, 9999px, 99px, 0);
   }
   65% {
-    clip: rect(53px, 9999px, 40px, 0);
+    clip: rect(29px, 9999px, 36px, 0);
   }
   70% {
-    clip: rect(11px, 9999px, 71px, 0);
+    clip: rect(17px, 9999px, 100px, 0);
   }
   75% {
-    clip: rect(30px, 9999px, 4px, 0);
+    clip: rect(49px, 9999px, 9px, 0);
   }
   80% {
-    clip: rect(5px, 9999px, 16px, 0);
+    clip: rect(70px, 9999px, 4px, 0);
   }
   85% {
-    clip: rect(12px, 9999px, 52px, 0);
+    clip: rect(20px, 9999px, 72px, 0);
   }
   90% {
-    clip: rect(66px, 9999px, 60px, 0);
+    clip: rect(89px, 9999px, 36px, 0);
   }
   95% {
-    clip: rect(28px, 9999px, 81px, 0);
+    clip: rect(7px, 9999px, 25px, 0);
   }
   100% {
-    clip: rect(46px, 9999px, 45px, 0);
+    clip: rect(65px, 9999px, 82px, 0);
   }
 }
 .error:before {
@@ -10384,6 +10389,7 @@ form.user .btn-user {
 footer.sticky-footer {
   padding: 2rem 0;
   flex-shrink: 0;
+  box-shadow: 1px 1px 5px 5px rgba(0, 0, 0, 0.1);
 }
 footer.sticky-footer .copyright {
   line-height: 1;
@@ -10404,6 +10410,14 @@ body.sidebar-toggled footer.sticky-footer {
 
 .text-brown {
   color: #5b4545 !important;
+}
+
+.text-total {
+  color: #6f42c1 !important;
+}
+
+.border-left-purple {
+  border-left: 0.25rem solid #6f42c1 !important;
 }
 
 #dashboard-info-cards {
