--- a/src/main/resources/static/scss/_footer.scss
+++ b/src/main/resources/static/scss/_footer.scss
@@ -1,6 +1,7 @@
 footer.sticky-footer {
   padding: 2rem 0;
   flex-shrink: 0;
+  box-shadow: 1px 1px 5px 5px rgba(0, 0, 0, 0.1);
   .copyright {
     line-height: 1;
     font-size: 0.8rem;
