--- a/src/main/resources/static/scss/navs/_topbar.scss
+++ b/src/main/resources/static/scss/navs/_topbar.scss
@@ -1,6 +1,7 @@
 // Topbar
 .topbar {
   height: $topbar-base-height;
+  box-shadow: 0 1px 6px 4px rgba(0,0,0,0.3) !important;
   #sidebarToggleTop {
     height: 2.5rem;
     width: 2.5rem;
