--- a/src/main/resources/static/scss/_login.scss
+++ b/src/main/resources/static/scss/_login.scss
@@ -28,9 +28,10 @@ form.user {
   }
 
   .form-control-user {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     border-radius: 10rem;
     padding: 1.5rem 1rem;
+    color: black;
   }
 
   .btn-user {
